--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --bg-img-width: calc(100% / 3);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 body {
     display: flex;
@@ -10,10 +11,28 @@ body {
 }
 
 #bg-img {
+    position: relative;
     height: 100%;
     width: var(--bg-img-width);
     background-image: url(images/wil-stewart-T26KCgCPsCI-unsplash.jpg);
     background-size: cover;
+}
+.logo {
+    position: absolute;
+    top: 30%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: min(100px, 10%);
+    background-color: rgb(0, 0, 0, 0.5);
+    gap: 3%;
+
+}
+.txtLogo {
+    font-size: 4rem;
+    font-weight: bolder;
+    align-self: center;
+    color: white;
 }
 
 #txt-section {
