--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
     --bg-img-width: calc(100% / 3);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --bg-color-desc: #F7F5F2;
 }
 body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     display: flex;
     margin: 0;
     padding: 0;
@@ -10,6 +11,7 @@ body {
     height: 100vh;
 }
 
+/* left side background and logo styling */
 #bg-img {
     position: relative;
     height: 100%;
@@ -19,21 +21,26 @@ body {
 }
 .logo {
     position: absolute;
-    top: 30%;
+    top: 25%;
+    align-items: center;
     display: flex;
     justify-content: center;
     width: 100%;
-    height: min(100px, 10%);
+    height: min(300px, 20%);
     background-color: rgb(0, 0, 0, 0.5);
     gap: 3%;
-
 }
-.txtLogo {
-    font-size: 4rem;
-    font-weight: bolder;
-    align-self: center;
+.logo-img {
+    flex: auto;
+    max-width: 33%;
+    max-height: 66%;
+}
+h1{
     color: white;
+    font-size: clamp(1rem, 5vw, 4rem);
 }
+
+/* txt description/form/button - right side styling */
 
 #txt-section {
     display: flex;
@@ -42,8 +49,28 @@ body {
     width: calc(100% - var(--bg-img-width));
     height: 100%;
 }
-.text {
-    border: 0.5px solid black;
+.text-container {
+    padding-left: 7%;
     width: 100%;
     height: calc(100% / 3);
 }
+.desc{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: var(--bg-color-desc);
+}
+
+.description {
+    width: 80%;
+}
+
+.form-section {
+    box-shadow: 0px 10px 5px grey;
+}
+
+form {
+    width: 80%;
+}
+
+
