--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
     --bg-img-width: calc(100% / 3);
-    --bg-color-desc: #F7F5F2;
+    --bg-color-desc: #f9fafb;
 }
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family:sans-serif;
     display: flex;
     margin: 0;
     padding: 0;
@@ -18,6 +18,9 @@ body {
     width: var(--bg-img-width);
     background-image: url(images/wil-stewart-T26KCgCPsCI-unsplash.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 .logo {
     position: absolute;
@@ -32,8 +35,8 @@ body {
 }
 .logo-img {
     flex: auto;
-    max-width: 33%;
-    max-height: 66%;
+    max-width: 30%;
+    max-height: 80%;
 }
 h1{
     color: white;
@@ -52,7 +55,7 @@ h1{
 .text-container {
     padding-left: 7%;
     width: 100%;
-    height: calc(100% / 3);
+    height: max(calc(100% / 3), 200px);
 }
 .desc{
     display: flex;
@@ -61,16 +64,29 @@ h1{
     background-color: var(--bg-color-desc);
 }
 
-.description {
-    width: 80%;
+.description{
+    width: 60%;
+}
+form {
+    width: min(600px, 80% );
 }
 
 .form-section {
     box-shadow: 0px 10px 5px grey;
 }
 
-form {
-    width: 80%;
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
 }
+
+li {
+    display: flex;
+    flex-direction: column;
+    padding: 3% 3% 0 0;
+}
+
+
 
 
