--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ h1{
     color: white;
     font-size: clamp(1rem, 5vw, 4rem);
 }
+h2 {
+    font-size: clamp(0.8rem, 5vw, 1.5rem);
+}
 
 /* txt description/form/button - right side styling */
 
@@ -52,27 +55,32 @@ h1{
     width: calc(100% - var(--bg-img-width));
     height: 100%;
 }
-.text-container {
+
+.desc, .btn {
     padding-left: 7%;
     width: 100%;
     height: max(calc(100% / 3), 200px);
+    background-color: var(--bg-color-desc);
 }
+
 .desc{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-color: var(--bg-color-desc);
 }
+.form-section {
+    padding-left: 7%;
+    width: 100%;
+    box-shadow: 3px 10px 5px grey;
+}
+.btn 
+
 
 .description{
     width: 60%;
 }
 form {
     width: min(600px, 80% );
-}
-
-.form-section {
-    box-shadow: 0px 10px 5px grey;
 }
 
 ul {
@@ -86,6 +94,17 @@ li {
     display: flex;
     flex-direction: column;
     padding: 3% 3% 0 0;
+}
+.createAcc {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 800;
+    border: none;
+    margin-top: 32px;
+    border-radius: 10px;
+    padding: clamp(0.8rem, 5vw, 1.5rem);
+    background-color: #173138;
+    padding: 12px 48px;
 }
 
 
