--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body {
 }
 .logo {
     position: absolute;
-    top: 25%;
+    top: 18.5%;
     align-items: center;
     display: flex;
     justify-content: center;
     width: 100%;
-    height: min(300px, 20%);
+    height: min(150px, 20%);
     background-color: rgb(0, 0, 0, 0.5);
     gap: 3%;
 }
@@ -43,7 +43,7 @@ h1{
     font-size: clamp(1rem, 5vw, 4rem);
 }
 h2 {
-    font-size: clamp(0.8rem, 5vw, 1.5rem);
+    font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 /* txt description/form/button - right side styling */
@@ -57,9 +57,10 @@ h2 {
 }
 
 .desc, .btn {
+    flex: auto;
     padding-left: 7%;
     width: 100%;
-    height: max(calc(100% / 3), 200px);
+    height: max(70%, 200px);
     background-color: var(--bg-color-desc);
 }
 
@@ -71,10 +72,9 @@ h2 {
 .form-section {
     padding-left: 7%;
     width: 100%;
-    box-shadow: 3px 10px 5px grey;
+    box-shadow: 0px 5px 10px grey;
+    z-index: 10;
 }
-.btn 
-
 
 .description{
     width: 60%;
@@ -100,11 +100,18 @@ li {
     color: white;
     font-weight: 800;
     border: none;
-    margin-top: 32px;
     border-radius: 10px;
-    padding: clamp(0.8rem, 5vw, 1.5rem);
     background-color: #173138;
-    padding: 12px 48px;
+    padding: 12px 28px;
+}
+.btn-txt {
+    position: relative;
+    top: 150px;
+}
+
+.logIn {
+    font-weight: bolder;
+    color: #173138;
 }
 
 
