--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h2 {
 }
 
 .desc{
+    margin-bottom: 24px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -95,6 +96,29 @@ li {
     flex-direction: column;
     padding: 3% 3% 0 0;
 }
+
+label{
+    color: rgb(87, 87, 87);
+}
+input {
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #e5e7eb;
+    border-radius: 4px;
+    padding: 4px 8px;
+    width: 100%;
+    font-size: 1rem;
+}
+input:focus-visible {
+    border: 1px solid blue;
+    box-shadow: 1px 1px 3px grey;
+}
+
+input:valid {
+    /* border: 1px solid green;
+    box-shadow: 1px 1px 3px grey; */
+}
+
 .createAcc {
     font-size: 1.5rem;
     color: white;
