--- a/style.css
+++ b/style.css
@@ -80,14 +80,18 @@ h2 {
 .description{
     width: 70%;
 }
+
 form {
-    width: min(600px, 80% );
+    width: 100%;
+    height: 100%;
 }
 
 ul {
+    width: min(600px, 80% );
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     list-style-type: none;
 }
 
@@ -111,6 +115,10 @@ input {
     width: 100%;
     font-size: 1rem;
 }
+
+/* input[id='password'] {
+    margin-bottom: 25px;
+} */
 input:focus-visible {
     border: 1px solid blue;
     box-shadow: 1px 1px 3px grey;
@@ -151,8 +159,8 @@ input:valid {
     /* Lowering the shadow */
 }
 .btn-txt {
-    position: relative;
-    top: 150px;
+    position: absolute;
+    margin-top: 32px;
 }
 
 a {
